--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://mitchellmunderwood.github.io/React_Portfolio_2",
+  "homepage": "https://whoismitchell.com",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
